--- a/Server/package.json
+++ b/Server/package.json
@@ -13,5 +13,8 @@
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
     "prisma-client-lib": "^1.34.10"
+  },
+  "devDependencies": {
+    "json-server": "^0.16.1"
   }
 }
