--- a/Server/package.json
+++ b/Server/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "graphql-helloworld-server",
-  "version": "1.0.0",
-  "description": "Graph QL Hello World Server",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "graphql-yoga": "^1.18.3",
-    "jsonwebtoken": "^8.5.1",
-    "prisma-client-lib": "^1.34.10"
-  },
-  "devDependencies": {
-    "json-server": "^0.16.1"
-  }
+    "name": "graphql-helloworld-server",
+    "version": "1.0.0",
+    "description": "Graph QL Hello World Server",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "graphql-yoga": "^1.18.3",
+        "jsonwebtoken": "^8.5.1",
+        "prisma-client-lib": "^1.34.10",
+        "mongodb": "^2.1.18",
+        "pg": "^6.0.1"
+    },
+    "devDependencies": {
+        "json-server": "^0.16.1"
+    }
 }
