--- a/Client/graphql-hello-client/package.json
+++ b/Client/graphql-hello-client/package.json
@@ -19,7 +19,8 @@
         "subscriptions-transport-ws": "^0.9.16"
     },
     "scripts": {
-        "start": "PORT=8000 react-scripts start",
+        "//": "PORT=8000 react-scripts start",  
+       "start": "set PORT=8000 && react-scripts start", 
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
